bonus/app/app-redirect.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: dev
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wil-redirect
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vburton-ikaismou.local`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: wil-playground
          port: 8888
